--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@ html, body {
 .accetta { background:#00ff9c; border-bottom-color:#00ff9c }
 .in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff }
 .da_contattare { background:#ffaa00; border-bottom-color:#ffaa00 }
-.rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d }
 
 /* BOTTONI */
 .hud-buttons { margin-top:12px; display:flex; gap:6px }
@@ -89,23 +88,10 @@ html, body {
   padding:5px 9px;
   cursor:pointer;
 }
-.hud-btn:hover {
-  background:#00ff9c;
-  color:#00110b;
-}
-
-/* REFERENTI */
-.hud-section {
-  margin-top:10px;
-  border-top:1px solid #222;
-  padding-top:6px;
-  display:none;
-}
-.hud-section li { font-size:12px; color:#fff }
 
 /* LABEL COMUNI */
 .label-comune {
-  color:#ffffff;
+  color:#fff;
   font-size:11px;
   text-shadow:0 0 6px rgba(0,0,0,.9);
   pointer-events:none;
@@ -134,47 +120,26 @@ html, body {
     </div>
   </div>
 
-  <div id="farm-box">
-    <h4>Farmacie (comune selezionato)</h4>
-    <div id="farm-count">—</div>
-
-    <div class="legend-row"><span class="dot accetta"></span> Privata – favorevole</div>
-    <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
-    <div class="legend-row"><span class="triangle accetta"></span> Comunale – favorevole</div>
-    <div class="legend-row"><span class="triangle da_contattare"></span> Comunale – da contattare</div>
-  </div>
-
   <div class="hud-buttons">
     <button class="hud-btn" id="btnAdd">Aggiungi referente</button>
-    <button class="hud-btn" id="btnToggle">Vedi referenti</button>
-  </div>
-
-  <div class="hud-section" id="refPanel">
-    <ul id="refList"></ul>
   </div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-const map=L.map('map',{ attributionControl:false }).setView([45.43,10.99],10);
+const map = L.map('map',{ attributionControl:false }).setView([45.43,10.99],10);
 L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',{maxZoom:18}).addTo(map);
 
 const DRIVE_URL="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm";
 
 const referenti={ "Verona":["Vincenzo R."] };
-const farmacie=[
- {nome:"Farmacia Centrale",comune:"Verona",lat:45.4387,lng:10.9921,tipo:"privata",stato:"accetta"},
- {nome:"Farmacia San Zeno",comune:"Verona",lat:45.4431,lng:10.9802,tipo:"comunale",stato:"in_trattativa"},
- {nome:"Farmacia Borgo Roma",comune:"Verona",lat:45.3898,lng:10.9825,tipo:"privata",stato:"da_contattare"}
-];
 
-let labels=[], comuni=[], selectedLayer=null, refVisibili=false;
-let farmLayer=L.layerGroup().addTo(map);
+let comuni=[];
+let selectedLayer=null;
+let labelsGroup = L.layerGroup().addTo(map);
 
 const hudTitle=document.getElementById('hudTitle');
 const hudSub=document.getElementById('hudSub');
-const refPanel=document.getElementById('refPanel');
-const refList=document.getElementById('refList');
 
 const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
 const hasRef=n=>referenti[n] && referenti[n].length>0;
@@ -187,86 +152,4 @@ fetch('data/comuni_verona.json')
     style:f=>{
       const n=nomeComune(f.properties);
       comuni.push(n);
-      return { color:hasRef(n)?'#00ff9c':'#ffaa00', weight:1, fillOpacity:0 };
-    },
-    onEachFeature:(f,l)=>{
-      const nome=nomeComune(f.properties);
-      const lab=L.marker(l.getBounds().getCenter(),{
-        icon:L.divIcon({className:'label-comune',html:nome}),
-        interactive:false
-      }).addTo(map);
-      labels.push(lab);
-      l.on('click',()=>selectComune(l,nome));
-    }
-  }).addTo(map);
-
-  map.fitBounds(layer.getBounds());
-  updateStats();
-  map.on('zoomend', handleZoom);
-  handleZoom();
-});
-
-/* ✅ GESTIONE ZOOM CORRETTA */
-function handleZoom(){
-  const z = map.getZoom();
-
-  // SE ZOOM OUT → reset selezione
-  if(z <= 10 && selectedLayer){
-    const prev = nomeComune(selectedLayer.feature.properties);
-    selectedLayer.setStyle({ color:hasRef(prev)?'#00ff9c':'#ffaa00', weight:1 });
-    selectedLayer = null;
-    hudTitle.innerText = "Provincia di Verona";
-    hudSub.innerText = "Vista generale";
-    farmLayer.clearLayers();
-    document.getElementById('farm-count').innerText = "—";
-  }
-
-  // LABEL ON/OFF
-  labels.forEach(l=>{
-    if(!selectedLayer && z <= 12) map.addLayer(l);
-    else map.removeLayer(l);
-  });
-}
-
-function selectComune(layer,nome){
-  if(selectedLayer){
-    const prev=nomeComune(selectedLayer.feature.properties);
-    selectedLayer.setStyle({color:hasRef(prev)?'#00ff9c':'#ffaa00',weight:1});
-  }
-  selectedLayer=layer;
-  layer.setStyle({color:'#fff',weight:3});
-  map.fitBounds(layer.getBounds(),{padding:[40,40]});
-  hudTitle.innerText="Comune di "+nome;
-  hudSub.innerText=hasRef(nome)?`Referenti: ${referenti[nome].length}`:"⚠ Comune orfano";
-  handleZoom();
-  showFarmacie(nome);
-}
-
-function showFarmacie(comune){
-  farmLayer.clearLayers();
-  const vis=farmacie.filter(f=>f.comune===comune);
-  document.getElementById('farm-count').innerText=vis.length+" farmacie";
-  vis.forEach(f=>{
-    const symbol=f.tipo==="privata"
-      ? `<div class="dot ${f.stato}"></div>`
-      : `<div class="triangle ${f.stato}"></div>`;
-    farmLayer.addLayer(
-      L.marker([f.lat,f.lng],{icon:L.divIcon({html:symbol,iconSize:[14,14]})})
-        .bindPopup(`
-          <strong>${f.nome}</strong><br>
-          <a href="https://www.google.com/maps?q=${f.lat},${f.lng}" target="_blank">Apri su Maps</a><br>
-          <a href="${DRIVE_URL}" target="_blank">Materiali campagna</a>
-        `)
-    );
-  });
-}
-
-function updateStats(){
-  const ok=comuni.filter(n=>hasRef(n)).length;
-  document.getElementById('cntOk').innerText=ok;
-  document.getElementById('cntOrfani').innerText=comuni.length-ok;
-}
-</script>
-
-</body>
-</html>
+      return { color:hasRef(n)?'#00ff9c':'#ffaa00',
