--- a/index.html
+++ b/index.html
@@ -44,42 +44,12 @@ html, body {
 .stat-ok .stat-value { color:#00ff9c }
 .stat-warn .stat-value { color:#ffaa00 }
 
-/* FARMACIE */
-#farm-box {
-  margin-top:14px;
-  padding-top:10px;
-  border-top:1px solid #222;
-}
-#farm-box h4 {
-  margin:0 0 6px;
-  font-size:11px;
-  text-transform:uppercase;
-  letter-spacing:.12em;
-  color:#9ef5d9;
-}
-#farm-count { font-size:12px; margin-bottom:6px }
-
-/* LEGENDA */
-.legend-row {
-  display:flex;
-  align-items:center;
-  gap:8px;
-  font-size:12px;
-  color:#e6e6e6;
-}
-.dot { width:14px; height:14px; border-radius:50% }
-.triangle {
-  width:0;height:0;
-  border-left:8px solid transparent;
-  border-right:8px solid transparent;
-  border-bottom:14px solid;
-}
-.accetta { background:#00ff9c; border-bottom-color:#00ff9c }
-.in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff }
-.da_contattare { background:#ffaa00; border-bottom-color:#ffaa00 }
-
 /* BOTTONI */
-.hud-buttons { margin-top:12px; display:flex; gap:6px }
+.hud-buttons {
+  margin-top:12px;
+  display:flex;
+  gap:6px;
+}
 .hud-btn {
   border:1px solid #00ff9c;
   background:#041812;
@@ -88,10 +58,26 @@ html, body {
   padding:5px 9px;
   cursor:pointer;
 }
+.hud-btn:hover {
+  background:#00ff9c;
+  color:#00110b;
+}
+
+/* REFERENTI */
+.hud-section {
+  margin-top:10px;
+  border-top:1px solid #222;
+  padding-top:6px;
+  display:none;
+}
+.hud-section li {
+  font-size:12px;
+  color:#fff;
+}
 
 /* LABEL COMUNI */
 .label-comune {
-  color:#fff;
+  color:#ffffff;
   font-size:11px;
   text-shadow:0 0 6px rgba(0,0,0,.9);
   pointer-events:none;
@@ -122,6 +108,11 @@ html, body {
 
   <div class="hud-buttons">
     <button class="hud-btn" id="btnAdd">Aggiungi referente</button>
+    <button class="hud-btn" id="btnToggle">Vedi referenti</button>
+  </div>
+
+  <div class="hud-section" id="refPanel">
+    <ul id="refList"></ul>
   </div>
 </div>
 
@@ -130,26 +121,144 @@ html, body {
 const map = L.map('map',{ attributionControl:false }).setView([45.43,10.99],10);
 L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',{maxZoom:18}).addTo(map);
 
-const DRIVE_URL="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm";
+/* DATI */
+const referenti = { "Verona": ["Vincenzo R."] };
 
-const referenti={ "Verona":["Vincenzo R."] };
-
-let comuni=[];
-let selectedLayer=null;
+let comuni = [];
 let labelsGroup = L.layerGroup().addTo(map);
+let selectedLayer = null;
+let refVisibili = false;
 
-const hudTitle=document.getElementById('hudTitle');
-const hudSub=document.getElementById('hudSub');
+const hudTitle = document.getElementById('hudTitle');
+const hudSub = document.getElementById('hudSub');
+const refPanel = document.getElementById('refPanel');
+const refList = document.getElementById('refList');
 
-const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
-const hasRef=n=>referenti[n] && referenti[n].length>0;
+const nomeComune = p => p.nome || p.DENOM_COM || p.name || 'Comune';
+const hasRef = n => referenti[n] && referenti[n].length > 0;
 
 /* COMUNI */
 fetch('data/comuni_verona.json')
-.then(r=>r.json())
-.then(data=>{
-  const layer=L.geoJSON(data,{
-    style:f=>{
-      const n=nomeComune(f.properties);
+.then(r => r.json())
+.then(data => {
+  const layer = L.geoJSON(data, {
+    style: f => {
+      const n = nomeComune(f.properties);
       comuni.push(n);
-      return { color:hasRef(n)?'#00ff9c':'#ffaa00',
+      return {
+        color: hasRef(n) ? '#00ff9c' : '#ffaa00',
+        weight: 1,
+        fillOpacity: 0
+      };
+    },
+    onEachFeature: (f, l) => {
+      const nome = nomeComune(f.properties);
+
+      const label = L.marker(l.getBounds().getCenter(), {
+        icon: L.divIcon({ className:'label-comune', html:nome }),
+        interactive: false
+      });
+      labelsGroup.addLayer(label);
+
+      l.on('click', () => selezionaComune(l, nome));
+    }
+  }).addTo(map);
+
+  map.fitBounds(layer.getBounds());
+  aggiornaContatori();
+  map.on('zoomend', gestisciZoom);
+  gestisciZoom();
+});
+
+/* ZOOM + LABEL */
+function gestisciZoom(){
+  const z = map.getZoom();
+
+  if (z <= 10 && selectedLayer) {
+    const prev = nomeComune(selectedLayer.feature.properties);
+    selectedLayer.setStyle({
+      color: hasRef(prev) ? '#00ff9c' : '#ffaa00',
+      weight:1
+    });
+    selectedLayer = null;
+    hudTitle.innerText = "Provincia di Verona";
+    hudSub.innerText = "Vista generale";
+  }
+
+  if (!selectedLayer && z <= 12) {
+    labelsGroup.eachLayer(l => l.setOpacity(1));
+  } else {
+    labelsGroup.eachLayer(l => l.setOpacity(0));
+  }
+}
+
+/* SELEZIONE COMUNE */
+function selezionaComune(layer, nome){
+  if (selectedLayer) {
+    const prev = nomeComune(selectedLayer.feature.properties);
+    selectedLayer.setStyle({
+      color: hasRef(prev) ? '#00ff9c' : '#ffaa00',
+      weight:1
+    });
+  }
+
+  selectedLayer = layer;
+  layer.setStyle({ color:'#fff', weight:3 });
+  map.fitBounds(layer.getBounds(), { padding:[40,40] });
+
+  hudTitle.innerText = "Comune di " + nome;
+  hudSub.innerText = hasRef(nome)
+    ? "Referenti: " + referenti[nome].length
+    : "⚠ Comune orfano";
+
+  gestisciZoom();
+}
+
+/* CONTATORI */
+function aggiornaContatori(){
+  const ok = comuni.filter(n => hasRef(n)).length;
+  document.getElementById('cntOk').innerText = ok;
+  document.getElementById('cntOrfani').innerText = comuni.length - ok;
+}
+
+/* PULSANTI REFERENTI */
+document.getElementById('btnAdd').onclick = () => {
+  if (!selectedLayer) return alert("Seleziona un comune");
+  const nome = hudTitle.innerText.replace("Comune di ","");
+  const n = prompt("Inserisci nome referente");
+  if (!n) return;
+
+  if (!referenti[nome]) referenti[nome] = [];
+  referenti[nome].push(n);
+
+  hudSub.innerText = "Referenti: " + referenti[nome].length;
+  aggiornaContatori();
+
+  if (refVisibili) mostraReferenti(nome);
+};
+
+document.getElementById('btnToggle').onclick = () => {
+  refVisibili = !refVisibili;
+  document.getElementById('btnToggle').innerText =
+    refVisibili ? "Nascondi referenti" : "Vedi referenti";
+
+  if (refVisibili && selectedLayer) {
+    mostraReferenti(hudTitle.innerText.replace("Comune di ",""));
+  } else {
+    refPanel.style.display = "none";
+  }
+};
+
+function mostraReferenti(nome){
+  refList.innerHTML = "";
+  (referenti[nome] || []).forEach(r => {
+    const li = document.createElement('li');
+    li.textContent = r;
+    refList.appendChild(li);
+  });
+  refPanel.style.display = "block";
+}
+</script>
+
+</body>
+</html>
