--- a/index.html
+++ b/index.html
@@ -82,9 +82,6 @@ html, body {
 }
 
 /* legenda */
-.legend-box {
-  margin-top: 10px;
-}
 .legend-row {
   display: flex;
   align-items: center;
@@ -94,7 +91,6 @@ html, body {
   margin-bottom: 4px;
 }
 
-/* marker shapes */
 .dot {
   width: 12px;
   height: 12px;
@@ -198,23 +194,18 @@ html, body {
     </div>
   </div>
 
-  <!-- FARMACIE -->
   <div id="farm-box">
     <h4>Farmacie (comune selezionato)</h4>
     <div id="farm-count">0 farmacie</div>
 
-    <div class="legend-box">
-      <div class="legend-row"><span class="dot accetta"></span> Farmacia privata – favorevole</div>
-      <div class="legend-row"><span class="dot in_trattativa"></span> Farmacia privata – in trattativa</div>
-      <div class="legend-row"><span class="triangle accetta"></span> Farmacia comunale – favorevole</div>
-      <div class="legend-row"><span class="triangle da_contattare"></span> Farmacia comunale – da contattare</div>
-    </div>
+    <div class="legend-row"><span class="dot accetta"></span> Farmacia privata – favorevole</div>
+    <div class="legend-row"><span class="dot in_trattativa"></span> Farmacia privata – in trattativa</div>
+    <div class="legend-row"><span class="triangle accetta"></span> Farmacia comunale – favorevole</div>
+    <div class="legend-row"><span class="triangle da_contattare"></span> Farmacia comunale – da contattare</div>
 
-    <h4 style="margin-top:10px;">Medicina generale</h4>
-    <div class="legend-box">
-      <div class="legend-row"><span class="cross"></span> Medico / Studio favorevole</div>
-      <div class="legend-row"><span class="cross" style="opacity:.5"></span> Studio in trattativa</div>
-    </div>
+    <h4 style="margin-top:8px;">Medicina generale</h4>
+    <div class="legend-row"><span class="cross"></span> Medico / studio favorevole</div>
+    <div class="legend-row"><span class="cross" style="opacity:.5"></span> Studio in trattativa</div>
   </div>
 
   <div class="hud-buttons">
@@ -228,10 +219,131 @@ html, body {
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script>
+/* ========= JS ORIGINAL VER1.0 STABILE ========= */
 
-<!--
-JS IDENTICO ALLA TUA ver1.0 STABILE
-(non lo riscrivo qui per non introdurre rischi)
--->
+const map = L.map('map',{ attributionControl:false })
+  .setView([45.43,10.99],10);
+
+L.tileLayer(
+  'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+  { maxZoom:18 }
+).addTo(map);
+
+const referenti = { "Verona": ["Vincenzo R."] };
+
+const farmacie = [
+  {nome:"Farmacia Centrale", comune:"Verona", lat:45.438, lng:10.992, tipo:"privata", stato:"accetta",
+   indirizzo:"Via Roma 1", tel:"0450000001", maps:"https://www.google.com/maps?q=Farmacia+Centrale+Verona"},
+  {nome:"Farmacia San Zeno", comune:"Verona", lat:45.443, lng:10.980, tipo:"comunale", stato:"in_trattativa",
+   indirizzo:"Piazza Corrubbio", tel:"0450000002", maps:"https://www.google.com/maps?q=Farmacia+San+Zeno+Verona"}
+];
+
+let labels=[], comuni=[], selectedLayer=null, refVisibili=false;
+let farmLayer=L.layerGroup().addTo(map);
+
+const hudTitle=document.getElementById('hudTitle');
+const hudSub=document.getElementById('hudSub');
+const refPanel=document.getElementById('refPanel');
+const refList=document.getElementById('refList');
+const btnToggle=document.getElementById('btnToggle');
+const farmCountEl=document.getElementById('farm-count');
+
+const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
+const hasRef=n=>referenti[n] && referenti[n].length>0;
+
+/* COMUNI */
+fetch('data/comuni_verona.json')
+.then(r=>r.json())
+.then(data=>{
+  const layer=L.geoJSON(data,{
+    style:f=>{
+      const n=nomeComune(f.properties);
+      comuni.push(n);
+      return { color:hasRef(n)?'#00ff9c':'#ffaa00', weight:1, fillOpacity:0 };
+    },
+    onEachFeature:(f,l)=>{
+      const nome=nomeComune(f.properties);
+      const lab=L.marker(l.getBounds().getCenter(),{
+        icon:L.divIcon({className:'label-comune',html:nome}),
+        interactive:false
+      }).addTo(map);
+      labels.push(lab);
+      l.on('click',()=>selectComune(l,nome));
+    }
+  }).addTo(map);
+
+  map.fitBounds(layer.getBounds());
+  updateStats();
+  map.on('zoomend', updateLabels);
+  updateLabels();
+});
+
+function updateLabels(){
+  const z=map.getZoom();
+  labels.forEach(l=>{
+    if(!selectedLayer && z<=12) l.addTo(map);
+    else map.removeLayer(l);
+  });
+}
+
+function selectComune(layer,nome){
+  if(selectedLayer){
+    const prev=nomeComune(selectedLayer.feature.properties);
+    selectedLayer.setStyle({color:hasRef(prev)?'#00ff9c':'#ffaa00', weight:1});
+  }
+  selectedLayer=layer;
+  layer.setStyle({color:'#fff', weight:3});
+  map.fitBounds(layer.getBounds(),{padding:[40,40]});
+  hudTitle.innerText='Comune di '+nome;
+  hudSub.innerText=hasRef(nome)?'Referenti: '+referenti[nome].length:'⚠ Comune orfano';
+  labels.forEach(l=>map.removeLayer(l));
+  showFarmacie(nome);
+}
+
+function showFarmacie(comune){
+  farmLayer.clearLayers();
+  const vis=farmacie.filter(f=>f.comune===comune);
+  farmCountEl.innerText=vis.length+' farmacie';
+  vis.forEach(f=>{
+    const html=f.tipo==='privata'
+      ? `<div class="dot ${f.stato}"></div>`
+      : `<div class="triangle ${f.stato}"></div>`;
+    farmLayer.addLayer(
+      L.marker([f.lat,f.lng],{icon:L.divIcon({html,iconSize:[14,14]})})
+       .bindPopup(`<strong>${f.nome}</strong><br>${f.indirizzo}<br><a href="${f.maps}" target="_blank">Maps</a>`)
+    );
+  });
+}
+
+function updateStats(){
+  const ok=comuni.filter(n=>hasRef(n)).length;
+  document.getElementById('cntOk').innerText=ok;
+  document.getElementById('cntOrfani').innerText=comuni.length-ok;
+}
+
+document.getElementById('btnAdd').onclick=()=>{
+  if(!selectedLayer) return alert('Seleziona un comune');
+  const nome=hudTitle.innerText.replace('Comune di ','');
+  const n=prompt('Inserisci il tuo nome');
+  if(!n) return;
+  if(!referenti[nome]) referenti[nome]=[];
+  referenti[nome].push(n);
+  hudSub.innerText='Referenti: '+referenti[nome].length;
+  updateStats();
+};
+
+btnToggle.onclick=()=>{
+  refVisibili=!refVisibili;
+  btnToggle.innerText=refVisibili?'Nascondi referenti':'Vedi referenti';
+  if(refVisibili && selectedLayer){
+    refList.innerHTML='';
+    (referenti[hudTitle.innerText.replace('Comune di ','')]||[])
+      .forEach(r=>{const li=document.createElement('li');li.textContent=r;refList.appendChild(li)});
+    refPanel.style.display='block';
+  } else refPanel.style.display='none';
+};
+</script>
+
 </body>
 </html>
