--- a/index.html
+++ b/index.html
@@ -81,16 +81,13 @@ html, body {
   margin-bottom: 6px;
 }
 
-/* legenda */
+/* legenda farmacie */
 .legend-row {
   display: flex;
   align-items: center;
   gap: 6px;
   font-size: 11px;
-  color: #e0e0e0;
-  margin-bottom: 4px;
 }
-
 .dot {
   width: 12px;
   height: 12px;
@@ -101,29 +98,6 @@ html, body {
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
   border-bottom: 12px solid;
-}
-.cross {
-  width: 14px;
-  height: 14px;
-  position: relative;
-}
-.cross::before,
-.cross::after {
-  content: '';
-  position: absolute;
-  background: #ffffff;
-}
-.cross::before {
-  width: 14px;
-  height: 4px;
-  top: 5px;
-  left: 0;
-}
-.cross::after {
-  width: 4px;
-  height: 14px;
-  top: 0;
-  left: 5px;
 }
 
 /* colori stato */
@@ -194,18 +168,15 @@ html, body {
     </div>
   </div>
 
+  <!-- FARMACIE -->
   <div id="farm-box">
     <h4>Farmacie (comune selezionato)</h4>
     <div id="farm-count">0 farmacie</div>
 
-    <div class="legend-row"><span class="dot accetta"></span> Farmacia privata – favorevole</div>
-    <div class="legend-row"><span class="dot in_trattativa"></span> Farmacia privata – in trattativa</div>
-    <div class="legend-row"><span class="triangle accetta"></span> Farmacia comunale – favorevole</div>
-    <div class="legend-row"><span class="triangle da_contattare"></span> Farmacia comunale – da contattare</div>
-
-    <h4 style="margin-top:8px;">Medicina generale</h4>
-    <div class="legend-row"><span class="cross"></span> Medico / studio favorevole</div>
-    <div class="legend-row"><span class="cross" style="opacity:.5"></span> Studio in trattativa</div>
+    <div class="legend-row"><span class="dot accetta"></span> Privata – accetta</div>
+    <div class="legend-row"><span class="triangle accetta"></span> Comunale – accetta</div>
+    <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
+    <div class="legend-row"><span class="triangle da_contattare"></span> Comunale – da contattare</div>
   </div>
 
   <div class="hud-buttons">
@@ -220,8 +191,7 @@ html, body {
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-/* ========= JS ORIGINAL VER1.0 STABILE ========= */
-
+/* MAPPA BASE */
 const map = L.map('map',{ attributionControl:false })
   .setView([45.43,10.99],10);
 
@@ -230,119 +200,250 @@ L.tileLayer(
   { maxZoom:18 }
 ).addTo(map);
 
-const referenti = { "Verona": ["Vincenzo R."] };
+/* DATI IN MEMORIA (provvisori) */
+const referenti = {
+  "Verona": ["Vincenzo R."]
+};
 
 const farmacie = [
-  {nome:"Farmacia Centrale", comune:"Verona", lat:45.438, lng:10.992, tipo:"privata", stato:"accetta",
-   indirizzo:"Via Roma 1", tel:"0450000001", maps:"https://www.google.com/maps?q=Farmacia+Centrale+Verona"},
-  {nome:"Farmacia San Zeno", comune:"Verona", lat:45.443, lng:10.980, tipo:"comunale", stato:"in_trattativa",
-   indirizzo:"Piazza Corrubbio", tel:"0450000002", maps:"https://www.google.com/maps?q=Farmacia+San+Zeno+Verona"}
+  {
+    nome:"Farmacia Centrale",
+    comune:"Verona",
+    lat:45.438,
+    lng:10.992,
+    tipo:"privata",
+    stato:"accetta",
+    indirizzo:"Via Roma 1",
+    tel:"045 0000001",
+    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+Centrale+Verona"
+  },
+  {
+    nome:"Farmacia San Zeno",
+    comune:"Verona",
+    lat:45.443,
+    lng:10.980,
+    tipo:"comunale",
+    stato:"in_trattativa",
+    indirizzo:"Piazza Corrubbio",
+    tel:"045 0000002",
+    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+San+Zeno+Verona"
+  },
+  {
+    nome:"Farmacia Borgo Roma",
+    comune:"Verona",
+    lat:45.389,
+    lng:10.982,
+    tipo:"privata",
+    stato:"da_contattare",
+    indirizzo:"Via Centro 12",
+    tel:"045 0000003",
+    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+Borgo+Roma+Verona"
+  }
 ];
 
-let labels=[], comuni=[], selectedLayer=null, refVisibili=false;
-let farmLayer=L.layerGroup().addTo(map);
+let labels = [];
+let comuni = [];
+let selectedLayer = null;
+let refVisibili = false;
+let farmLayer = L.layerGroup().addTo(map);
 
-const hudTitle=document.getElementById('hudTitle');
-const hudSub=document.getElementById('hudSub');
-const refPanel=document.getElementById('refPanel');
-const refList=document.getElementById('refList');
-const btnToggle=document.getElementById('btnToggle');
-const farmCountEl=document.getElementById('farm-count');
+/* RIFERIMENTI HUD */
+const hudTitle   = document.getElementById('hudTitle');
+const hudSub     = document.getElementById('hudSub');
+const refPanel   = document.getElementById('refPanel');
+const refList    = document.getElementById('refList');
+const btnToggle  = document.getElementById('btnToggle');
+const farmCountEl= document.getElementById('farm-count');
 
-const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune';
-const hasRef=n=>referenti[n] && referenti[n].length>0;
+const nomeComune = p => p.nome || p.DENOM_COM || p.name || 'Comune';
+const hasRef     = n => referenti[n] && referenti[n].length>0;
+
+/* FUNZIONI UTILITARIE */
+function resetSelezione(){
+  if(selectedLayer){
+    const prevName = nomeComune(selectedLayer.feature.properties);
+    selectedLayer.setStyle({
+      color: hasRef(prevName) ? '#00ff9c' : '#ffaa00',
+      weight: 1,
+      fillOpacity: 0
+    });
+  }
+  selectedLayer = null;
+  hudTitle.innerText = 'Provincia di Verona';
+  hudSub.innerText   = 'Vista generale';
+  farmLayer.clearLayers();
+  farmCountEl.innerText = '0 farmacie';
+  refPanel.style.display = 'none';
+  refVisibili = false;
+  btnToggle.innerText = 'Vedi referenti';
+}
+
+/* AGGIORNA LABELS IN BASE ALLO ZOOM E SELEZIONE */
+function aggiornaLabels(){
+  const z = map.getZoom();
+  labels.forEach(l => {
+    if(!selectedLayer && z >= 9 && z <= 12){
+      if(!map.hasLayer(l)) map.addLayer(l);
+    } else {
+      if(map.hasLayer(l)) map.removeLayer(l);
+    }
+  });
+}
 
 /* COMUNI */
 fetch('data/comuni_verona.json')
-.then(r=>r.json())
-.then(data=>{
-  const layer=L.geoJSON(data,{
-    style:f=>{
-      const n=nomeComune(f.properties);
-      comuni.push(n);
-      return { color:hasRef(n)?'#00ff9c':'#ffaa00', weight:1, fillOpacity:0 };
-    },
-    onEachFeature:(f,l)=>{
-      const nome=nomeComune(f.properties);
-      const lab=L.marker(l.getBounds().getCenter(),{
-        icon:L.divIcon({className:'label-comune',html:nome}),
-        interactive:false
-      }).addTo(map);
-      labels.push(lab);
-      l.on('click',()=>selectComune(l,nome));
-    }
-  }).addTo(map);
+  .then(r => r.json())
+  .then(data => {
 
-  map.fitBounds(layer.getBounds());
-  updateStats();
-  map.on('zoomend', updateLabels);
-  updateLabels();
-});
+    const layer = L.geoJSON(data,{
+      style: f => {
+        const n = nomeComune(f.properties);
+        if(!comuni.includes(n)) comuni.push(n);
+        return {
+          color: hasRef(n) ? '#00ff9c' : '#ffaa00',
+          weight: 1,
+          fillOpacity: 0
+        };
+      },
+      onEachFeature:(f,layer) => {
+        const nome = nomeComune(f.properties);
+        const center = layer.getBounds().getCenter();
 
-function updateLabels(){
-  const z=map.getZoom();
-  labels.forEach(l=>{
-    if(!selectedLayer && z<=12) l.addTo(map);
-    else map.removeLayer(l);
+        const label = L.marker(center,{
+          icon: L.divIcon({
+            className:'label-comune',
+            html: nome,
+            iconSize:[120,16]
+          }),
+          interactive:false
+        });
+        labels.push(label);
+        label.addTo(map);
+
+        layer.on('click', () => selezionaComune(layer,nome));
+      }
+    }).addTo(map);
+
+    map.fitBounds(layer.getBounds());
+    aggiornaContatori();
+    aggiornaLabels();
+
+    map.on('zoomend', () => {
+      const z = map.getZoom();
+      if(selectedLayer && z < 9.5){
+        resetSelezione();
+      }
+      aggiornaLabels();
+    });
   });
-}
 
-function selectComune(layer,nome){
+/* SELEZIONE COMUNE */
+function selezionaComune(layer,nome){
   if(selectedLayer){
-    const prev=nomeComune(selectedLayer.feature.properties);
-    selectedLayer.setStyle({color:hasRef(prev)?'#00ff9c':'#ffaa00', weight:1});
+    const prev = nomeComune(selectedLayer.feature.properties);
+    selectedLayer.setStyle({
+      color: hasRef(prev) ? '#00ff9c' : '#ffaa00',
+      weight:1,
+      fillOpacity:0
+    });
   }
-  selectedLayer=layer;
-  layer.setStyle({color:'#fff', weight:3});
-  map.fitBounds(layer.getBounds(),{padding:[40,40]});
-  hudTitle.innerText='Comune di '+nome;
-  hudSub.innerText=hasRef(nome)?'Referenti: '+referenti[nome].length:'⚠ Comune orfano';
-  labels.forEach(l=>map.removeLayer(l));
-  showFarmacie(nome);
+
+  selectedLayer = layer;
+  layer.setStyle({
+    color:'#ffffff',
+    weight:3,
+    fillOpacity:0
+  });
+
+  map.fitBounds(layer.getBounds(),{ padding:[40,40] });
+
+  hudTitle.innerText = 'Comune di ' + nome;
+  hudSub.innerText   = hasRef(nome)
+    ? 'Referenti presenti: ' + referenti[nome].length
+    : '⚠ Comune orfano';
+
+  // nascondi labels quando sto lavorando sul singolo comune
+  labels.forEach(l => { if(map.hasLayer(l)) map.removeLayer(l); });
+
+  mostraFarmacie(nome);
 }
 
-function showFarmacie(comune){
+/* FARMACIE PER COMUNE */
+function mostraFarmacie(comune){
   farmLayer.clearLayers();
-  const vis=farmacie.filter(f=>f.comune===comune);
-  farmCountEl.innerText=vis.length+' farmacie';
-  vis.forEach(f=>{
-    const html=f.tipo==='privata'
+  const vis = farmacie.filter(f => f.comune === comune);
+  farmCountEl.innerText = vis.length + ' farmacie';
+
+  vis.forEach(f => {
+    const simbolo = f.tipo === 'privata'
       ? `<div class="dot ${f.stato}"></div>`
       : `<div class="triangle ${f.stato}"></div>`;
-    farmLayer.addLayer(
-      L.marker([f.lat,f.lng],{icon:L.divIcon({html,iconSize:[14,14]})})
-       .bindPopup(`<strong>${f.nome}</strong><br>${f.indirizzo}<br><a href="${f.maps}" target="_blank">Maps</a>`)
-    );
+
+    const popupHtml = `
+      <strong>${f.nome}</strong><br/>
+      ${f.tipo} – ${f.indirizzo}<br/>
+      Tel: ${f.tel}<br/>
+      <a href="${f.maps}" target="_blank">Apri in Maps</a><br/>
+      <a href="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm" target="_blank">
+        Materiali campagna
+      </a>
+    `;
+
+    const m = L.marker([f.lat,f.lng],{
+      icon: L.divIcon({ html: simbolo, iconSize:[14,14], className:'' })
+    }).bindPopup(popupHtml);
+
+    farmLayer.addLayer(m);
   });
 }
 
-function updateStats(){
-  const ok=comuni.filter(n=>hasRef(n)).length;
-  document.getElementById('cntOk').innerText=ok;
-  document.getElementById('cntOrfani').innerText=comuni.length-ok;
+/* CONTATORI COMUNI */
+function aggiornaContatori(){
+  const ok     = comuni.filter(n => hasRef(n)).length;
+  const orfani = comuni.length - ok;
+  document.getElementById('cntOk').innerText     = ok;
+  document.getElementById('cntOrfani').innerText= orfani;
 }
 
-document.getElementById('btnAdd').onclick=()=>{
-  if(!selectedLayer) return alert('Seleziona un comune');
-  const nome=hudTitle.innerText.replace('Comune di ','');
-  const n=prompt('Inserisci il tuo nome');
+/* REFERENTI: AGGIUNGI */
+document.getElementById('btnAdd').onclick = () => {
+  if(!selectedLayer){
+    alert('Seleziona prima un comune sulla mappa');
+    return;
+  }
+  const nomeComuneSel = hudTitle.innerText.replace('Comune di ','');
+  const n = prompt('Inserisci il tuo nome (verrà mostrato come referente)');
   if(!n) return;
-  if(!referenti[nome]) referenti[nome]=[];
-  referenti[nome].push(n);
-  hudSub.innerText='Referenti: '+referenti[nome].length;
-  updateStats();
+  if(!referenti[nomeComuneSel]) referenti[nomeComuneSel] = [];
+  referenti[nomeComuneSel].push(n);
+  hudSub.innerText = 'Referenti presenti: ' + referenti[nomeComuneSel].length;
+  aggiornaContatori();
+  if(refVisibili) mostraReferenti(nomeComuneSel);
 };
 
-btnToggle.onclick=()=>{
-  refVisibili=!refVisibili;
-  btnToggle.innerText=refVisibili?'Nascondi referenti':'Vedi referenti';
+/* REFERENTI: TOGGLE VEDI/NASCONDI */
+document.getElementById('btnToggle').onclick = () => {
+  refVisibili = !refVisibili;
+  btnToggle.innerText = refVisibili ? 'Nascondi referenti' : 'Vedi referenti';
+
   if(refVisibili && selectedLayer){
-    refList.innerHTML='';
-    (referenti[hudTitle.innerText.replace('Comune di ','')]||[])
-      .forEach(r=>{const li=document.createElement('li');li.textContent=r;refList.appendChild(li)});
-    refPanel.style.display='block';
-  } else refPanel.style.display='none';
+    const nomeComuneSel = hudTitle.innerText.replace('Comune di ','');
+    mostraReferenti(nomeComuneSel);
+  } else {
+    refPanel.style.display = 'none';
+  }
 };
+
+function mostraReferenti(nome){
+  refList.innerHTML = '';
+  const lista = referenti[nome] || [];
+  lista.forEach(r => {
+    const li = document.createElement('li');
+    li.textContent = r;
+    refList.appendChild(li);
+  });
+  refPanel.style.display = lista.length ? 'block' : 'none';
+}
 </script>
 
 </body>
